--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -37,6 +37,27 @@ footer ul li {
     margin-left: 15px;
 }
 
+/* to move the footer when the page is collapsed or mobile mode */
+
+@media (max-width: 800px) {
+    footer {
+        small {
+            display: block;
+            float: none;
+            margin-bottom: 1em;
+        }
+        ul {
+            float: none;
+            padding: 0;
+            li {
+                float: none;
+                margin-left: 0;
+            }
+        }
+    }
+}
+
+
 /* sidebar */
 aside {
     section.user_info {
