--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,19 @@
       <div class="container">
        <div id = "header_txt">EchogramLib </div>      
         <nav>
-          <ul class="nav navbar-nav navbar-right">
+          <div class="navbar-header">   <!--to add hamburger menu when the page is collapsed-->
+            <button type="button" class="navbar-toggle collapsed"
+                    data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1"
+                    aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+          </div>
+          <ul class="nav navbar-nav navbar-right collapse navbar-collapse"
+              id="bs-example-navbar-collapse-1"> <!-- end section needed to add hamburger menu when the page is collapsed-->
               <li><%= link_to "Home",          root_path %></li>
               <li><%= link_to "SignUp",        signup_path %></li>
               <li><%= link_to "help",           "#" %></li>
